# fastapi-template

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
core/: config.py  db_helper.py
core/models/: product.py
